vertical-align column bug fixed

--- a/src/ContentPages/page2.css
+++ b/src/ContentPages/page2.css
@@ -13,6 +13,7 @@
     padding-left: 8px;
     padding-right: 8px;
     box-sizing: border-box;
+    vertical-align: top;
 }
 
 .columns_holder {
